add an extra test

--- a/Datetime_Testing.ipynb
+++ b/Datetime_Testing.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +102,29 @@
     }
    ],
    "source": [
-    "print(delta.days)\n",
-    "print(delta.seconds)"
+    "days = delta.days\n",
+    "seconds = delta.seconds\n",
+    "print(days)\n",
+    "print(seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(days))\n",
+    "print(type(seconds))"
    ]
   },
   {
